Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanUndefinedField.quorum
class Main
    boolean v = undefined
    action Main
        Test(v)
    end

    action Test(boolean var)
    end
end
